[gd_scene load_steps=7 format=3 uid="uid://djtbi0c46tdr8"]

[ext_resource type="Script" path="res://Scripts/Controllers/Interactable_Text_Controller.gd" id="1_7m5hf"]
[ext_resource type="Material" uid="uid://bjhe2mn8cpuyo" path="res://Assets/Materials/concrete_wall.tres" id="2_7p6ec"]
[ext_resource type="FontFile" uid="uid://dt6rvsf6bwn6f" path="res://Assets/WorldTextFont.tres" id="2_ty14u"]

[sub_resource type="BoxShape3D" id="BoxShape3D_7gqxw"]
size = Vector3(0.294434, 0.0254975, 0.538025)

[sub_resource type="PlaneMesh" id="PlaneMesh_wytwn"]
size = Vector2(0.25, 0.5)

[sub_resource type="SphereShape3D" id="SphereShape3D_n0t02"]
radius = 2.66461

[node name="StaticBody3D" type="StaticBody3D" groups=["Text"]]
script = ExtResource("1_7m5hf")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0129395, 0.00620267, 0.00015267)
shape = SubResource("BoxShape3D_7gqxw")

[node name="Text" type="MeshInstance3D" parent="."]
material_override = ExtResource("2_7p6ec")
mesh = SubResource("PlaneMesh_wytwn")

[node name="WorldText" type="Label3D" parent="Text"]
unique_name_in_owner = true
font = ExtResource("2_ty14u")

[node name="TextBox" type="Control" parent="Text"]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchor_left = 0.482639
anchor_right = 0.517361
anchor_bottom = 0.0617284
grow_horizontal = 2
metadata/_edit_use_anchors_ = true

[node name="UIText" type="RichTextLabel" parent="Text/TextBox"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = -13.9
anchor_right = 14.875
anchor_bottom = 6.65
grow_horizontal = 2
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="Text/TextBox"]
layout_mode = 1
anchors_preset = -1
anchor_left = -13.925
anchor_right = 14.925
anchor_bottom = 6.625
grow_horizontal = 2
grow_vertical = 2
color = Color(0.192739, 0.356647, 0.24688, 0.32549)
metadata/_edit_use_anchors_ = true

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_n0t02")

[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
